Update hack message in index.html
Removed the message about being hacked by fsociety.

--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@ p {
 <body>
 <img src="https://i.gifer.com/GXjn.gif" class="logo">
 <center><h3>Witryna Została shakowana</h3></center>
-<p>Wasze zabezpieczenia zostały złamane przez fsociety jesteśmy legionem hakerskim jesteśmy wszędzie</p>
+<p>Wasze zabezpieczenia zostały złamane</p>
 </body>
 </html>
